Basic hookup of scrape status
